# skat_parser

./: .gitignore  Cargo.toml  error-spec.yml  main.js  package.json  record-spec.yml  style.css  webpack.config.js
notional-data-generator/: generate.py  sample-errors.txt  sample.txt
src/: app.rs  field_component.rs  field_list_component.rs  file_drop_component.rs  lib.rs  record_component.rs  record_list_component.rs  record_parser.rs  routes.rs  welcome.rs
