[package]
name = "eindkomst-ui"
version = "0.1.0"
authors = ["Kasper Nielsen <kasper0406@gmail.com>"]
edition = "2018"

[dependencies]
yew = "0.17.3"
yew-router = "0.14.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.17"
console_error_panic_hook = "0.1.6"
wasm-streams = "0.1.1"
futures = "0.3.5"
js-sys = "0.3.45"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
encoding = "0.2"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'AudioContext',
    'AudioBuffer',
    'AudioBufferSourceNode',
    'AudioDestinationNode',
    'BlobPropertyBag',
    'Blob',
    'Url',
    'AudioWorklet',
    'AudioWorkletNode',
    'DataTransfer',
    'DragEvent',
    'ReadableStream',
]
